--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,6 +14,7 @@
     <script src="lib/jquery-3.6.0.min.js"></script>
     <script src="lib/bootstrap.min.js"></script>
     <script src="index.js"></script>
+    <script src="functions.js"></script>
 
 </body>
 </html>
