--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <title>Template</title>
 </head>
 <body>
-    <button id="home">Click para cargar inicio</button>
+    <button id="home" class="nav-item">Click para cargar inicio</button>
     <div class="container">
 
     </div>
